# rig-remote

./: .gitignore  LICENSE  LICENSE.md  README.md  config_checker.py  gpl.html  gqrx-bookmarks.csv  gqrx-notes  gqrx-remote.conf  gqrx-remote.py  pyproject.toml  release.sh  requirements.txt  rig-bookmarks.csv  rig-remote.py  rig-remote.ui  setup.cfg  setup.py  test.sh
functional_tests/: gqrx_config.py  test_auto_bookmark.py  test_auto_bookmark_gqrx.py  test_bookmark_scanning_gqrx.py  test_bookmark_scanning_hamlib.py  test_disk_logging_gqrx.py  test_disk_logging_hamlib.py  test_frequency_scanning.py  test_frequency_scanning_gqrx.py  test_inner_refinement_scan_gqrx.py  test_inner_refinement_scan_hamlib.py  test_queue_updates_mid_scan.py  test_queue_updates_mid_scan_gqrx.py  test_sync_continuous.py  test_sync_continuous_gqrx.py  test_sync_frequency.py  test_sync_frequency_hamlib.py
modules/: app_config.py  constants.py  disk_io.py  exceptions.py  queue_comms.py  rigctl.py  scanning.py  stmessenger.py  ui.py
rig_remote/: app_config.py  bookmarks.py  bookmarksmanager.py  constants.py  disk_io.py  exceptions.py  qt_ui.py  queue_comms.py  rigctl.py  scanning.py  stmessenger.py  syncing.py  ui.py  utility.py
rig_remote/models/: bookmark.py  channel.py  modulation_modes.py  rig_endpoint.py  scanning_task.py  sync_task.py
src/: config_checker.py
src/config_checker/: config_checker.py
src/rig_remote/: app_config.py  bookmark_scanner_strategy.py  bookmarks.py  bookmarksmanager.py  constants.py  disk_io.py  exceptions.py  frequency_scanner_strategy.py  queue_comms.py  rig_remote.py  rigctl.py  scanner_core.py  scanning.py  scanning_config.py  stmessenger.py  syncing.py  ui.py  ui_handlers.py  ui_qt.py  ui_renderer.py  ui_scan_handlers.py  utility.py
src/rig_remote/models/: bookmark.py  channel.py  modulation_modes.py  rig_endpoint.py  scanning_task.py  sync_task.py
src/rig_remote/rig_backends/: __init__.py  gqrx_rigctl.py  hamlib_rigctl.py  mode_translator.py  protocol.py
test/: bad-signal-config.file  test-bookmarks.csv  test-config.file  test_appconfig.py  test_bookmark.py  test_bookmarks.py  test_bookmarksmanager.py  test_bookmarls.py  test_disk_io.py  test_import.py  test_queuecomms.py  test_rig_endpoint.py  test_rigctl.py  test_scanning.py  test_stmessenger.py  test_syncing.py  test_ui.py  test_utility.py
test/test_files/: test-config.file  test-gqrx-bookmarks-duplicates.csv  test-gqrx-bookmarks.csv  test-rig_remote-bookmarks-duplicates.csv  test-rig_remote-bookmarks-skipped.csv  test-rig_remote-bookmarks.csv
tests/: bad-signal-config.file  conftest.py  test_appconfig.py  test_bookmark.py  test_bookmarksmanager.py  test_channel.py  test_config_checker.py  test_disk_io.py  test_gqrx_rigctl.py  test_hamlib_rigctl.py  test_import.py  test_mode_translator.py  test_qt_ui.py  test_queuecomms.py  test_rig_endpoint.py  test_rig_remote.py  test_rigctl.py  test_scanning.py  test_scanning_task.py  test_stmessenger.py  test_sync_task.py  test_syncing.py  test_ui.py  test_ui_qt.py  test_ui_qt_cover.py  test_ui_renderer.py  test_utility.py
tests/test_files/: test-gqrx-bookmarks-duplicates.csv  test-gqrx-bookmarks.csv  test-rig_remote-bookmarks-broken.csv  test-rig_remote-bookmarks-duplicates.csv  test-rig_remote-bookmarks-unsupported.csv  test-rig_remote-bookmarks.csv  test_config_file_generator.py
tests/test_files/test_config_files/: test-config-missing-header.file  test-config.file  test-config_1_10_10_-100.ini  test-config_1_10_10_0.ini  test-config_1_10_10_100.ini  test-config_1_10_1_-100.ini  test-config_1_10_1_-30.ini  test-config_1_10_20_0.ini  test-config_1_1_10_-100.ini  test-config_1_1_10_0.ini  test-config_1_1_10_100.ini  test-config_1_1_1_-100.ini  test-config_1_1_1_-30.ini  test-config_1_1_1_100.ini  test-config_1_1_20_-100.ini  test-config_1_1_20_0.ini  test-config_1_1_20_100.ini  test-config_1_5_10_-100.ini  test-config_1_5_10_-30.ini  test-config_1_5_10_0.ini  test-config_1_5_10_100.ini  test-config_1_5_1_-100.ini  test-config_1_5_1_0.ini  test-config_1_5_20_-30.ini  test-config_1_5_20_0.ini  test-config_1_5_20_100.ini  test-config_200_10_10_0.ini  test-config_200_10_10_100.ini  test-config_200_10_1_-100.ini  test-config_200_10_1_100.ini  test-config_200_10_20_0.ini  test-config_200_1_10_-100.ini  test-config_200_1_10_0.ini  test-config_200_1_10_100.ini  test-config_200_1_1_-100.ini  test-config_200_1_1_-30.ini  test-config_200_1_1_0.ini  test-config_200_1_1_100.ini  test-config_200_1_20_-100.ini  test-config_200_1_20_-30.ini  (+29 more)
tests/test_files/test_configs/: test-config_1_10_10_-30.ini  test-config_1_10_1_0.ini  test-config_1_10_1_100.ini  test-config_1_10_20_-100.ini  test-config_1_10_20_-30.ini  test-config_1_10_20_100.ini  test-config_1_1_10_-30.ini  test-config_1_1_1_0.ini  test-config_1_1_20_-30.ini  test-config_1_5_1_-30.ini  test-config_1_5_1_100.ini  test-config_1_5_20_-100.ini  test-config_200_10_10_-100.ini  test-config_200_10_10_-30.ini  test-config_200_10_1_-30.ini  test-config_200_10_1_0.ini  test-config_200_10_20_-100.ini  test-config_200_10_20_-30.ini  test-config_200_10_20_100.ini  test-config_200_1_10_-30.ini  test-config_200_5_10_100.ini  test-config_200_5_1_0.ini  test-config_200_5_1_100.ini  test-config_200_5_20_-100.ini  test-config_200_5_20_0.ini  test-config_200_5_20_100.ini  test-config_400_10_10_-30.ini  test-config_400_10_10_0.ini  test-config_400_10_10_100.ini  test-config_400_10_1_0.ini  test-config_400_10_20_0.ini  test-config_400_10_20_100.ini  test-config_400_1_1_-100.ini  test-config_400_1_1_0.ini  test-config_400_1_20_-30.ini  test-config_400_1_20_0.ini  test-config_400_1_20_100.ini  test-config_400_5_10_-30.ini  test-config_400_5_1_-30.ini  test-config_400_5_1_0.ini  (+2 more)
