[build-system]
requires = ["setuptools>=61"]
build-backend = 'setuptools.build_meta'

[project]
name = "rig-remote"
version = "3.1"
authors = [
  { name="Simone Marzona", email="marzona@knoway.info" },
]
maintainers = [
  { name="Simone Marzona", email="marzona@knoway.info" },
]
keywords = ["rigctl", "ham", "radio", "bookmarks", "scanner"]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Communications",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
]
description = "A tool for remotely controlling a radio transceiver using RigCtl protocol over TCP/IP. Rig Remote provides frequency scanning, monitoring, and frequency bookmarks."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]

# Runtime-only third-party dependencies.
# stdlib modules (configparser, datetime, logging, etc.) must NOT appear here.
dependencies = [
    "PySide6>=6.6",
    "Hamlib",
]

[project.urls]
Homepage = "https://github.com/Marzona/rig-remote"
Issues = "https://github.com/Marzona/rig-remote/issues"

[project.scripts]
config_checker = "config_checker.config_checker:cli"

[project.gui-scripts]
rig_remote = "rig_remote.rig_remote:cli"

[project.entry-points."rig_remote"]
rig_remote = "rig_remote.rig_remote:cli"

# ---------------------------------------------------------------------------
# Dev dependency group (PEP 735 — native to uv).
# Install with: uv sync --group dev
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "build>=1.2",
    "coverage>=7.6",
    "mock>=5.1",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "ruff>=0.8",
    "twine>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "functional_tests",
]
console_output_style = "progress"
log_cli = "True"
pythonpath = "src"
required_plugins = ["pytest-xdist>=3.6.1"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["docs"]

[[tool.mypy.overrides]]
module = ["Hamlib"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade  B: flake8-bugbear
select = ["E", "W", "F", "I", "UP", "B"]
